Refactor test Java code
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>